[package]
name = "attic"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-stream = { version = "0.3.5", optional = true }
base64 = "0.22.1"
bytes = "1.4.0"
displaydoc = "0.2.4"
digest = "0.10.7"
ed25519-compact = "2.0.4"
fastcdc = "3.0.3"
futures = "0.3.28"
hex = "0.4.3"
lazy_static = "1.4.0"
nix-base32 = "0.2.0"
regex = "1.8.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_with = "3.0.0"
sha2 = "0.10.6"
tempfile = "3"
wildmatch = "2.1.1"
xdg = "2.5.0"

# Native libnixstore bindings.
cxx = { version = "1.0", optional = true }

[dependencies.tokio]
version = "1.28.2"
optional = true
features = [
	"io-util",
	"macros",
	"sync",
]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
fastcdc = { version = "*", features = ["tokio"] }
serde_json = "1.0.96"

[build-dependencies]
cc = "1.1.13"
cxx-build = { version = "1.0", optional = true }
system-deps = { version = "7.0", optional = true }
version-compare = "0.2.0"

[package.metadata.system-deps]
nix-store = { version = "2.24", feature = "nix_store" }
nix-main = { version = "2.24", feature = "nix_store" }

[features]
default = [
	"chunking",
	"nix_store",
	"stream",
	"tokio",
]

# Chunking.
chunking = ["tokio", "stream", "dep:async-stream"]

# Native libnixstore bindings.
#
# When disabled, the native Rust portions of nix_store can still be used.
nix_store = [
	"tokio",
	"tokio/fs",
	"tokio/process",
	"dep:cxx",
	"dep:cxx-build",
	"dep:system-deps",
]

# Stream utilities.
stream = ["tokio", "dep:async-stream"]

# Tokio runtime.
tokio = ["dep:tokio", "tokio/rt", "tokio/time"]

[[bench]]
name = "chunking"
harness = false
