[package]
name = "attic"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-stream = { version = "0.3.6", optional = true }
base64 = "0.22.1"
bytes = "1.10.1"
displaydoc = "0.2.5"
digest = "0.10.7"
ed25519-compact = "2.1.1"
fastcdc = "3.2.1"
futures = "0.3.31"
hex = "0.4.3"
lazy_static = "1.5.0"
nix-base32 = "0.2.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.14.0"
sha2 = "0.10.9"
tempfile = "3"
wildmatch = "2.4.0"

# Native libnixstore bindings.
cxx = { version = "1.0", optional = true }

[dependencies.tokio]
version = "1.46.1"
optional = true
features = [
	"io-util",
	"macros",
	"sync",
]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports", "async_tokio"] }
fastcdc = { version = "*", features = ["tokio"] }
serde_json = "1.0.140"

[build-dependencies]
cc = "1.2.29"
cxx-build = { version = "1.0", optional = true }
system-deps = { version = "7.0", optional = true }
version-compare = "0.2.0"

[package.metadata.system-deps]
nix-store = { version = "2.24", feature = "nix_store" }
nix-main = { version = "2.24", feature = "nix_store" }

[features]
default = [
	"chunking",
	"nix_store",
	"stream",
	"tokio",
]

# Chunking.
chunking = ["tokio", "stream", "dep:async-stream"]

# Native libnixstore bindings.
#
# When disabled, the native Rust portions of nix_store can still be used.
nix_store = [
	"tokio",
	"tokio/fs",
	"tokio/process",
	"dep:cxx",
	"dep:cxx-build",
	"dep:system-deps",
]

# Stream utilities.
stream = ["tokio", "dep:async-stream"]

# Tokio runtime.
tokio = ["dep:tokio", "tokio/rt", "tokio/time"]

[[bench]]
name = "chunking"
harness = false
