[package]
name = "attic-client"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "attic"
path = "src/main.rs"

[dependencies]
attic = { path = "../attic" }

anyhow = "1.0.71"
async-channel = "1.8.0"
async-stream = "0.3.5"
bytes = "1.4.0"
clap = { version = "4.3", features = ["derive"] }
clap_complete = "4.3.0"
const_format = "0.2.30"
dialoguer = "0.10.4"
displaydoc = "0.2.4"
enum-as-inner = "0.5.1"
futures = "0.3.28"
humantime = "2.1.0"
indicatif = "0.17.3"
lazy_static = "1.4.0"
notify = { version = "6.0.0", default-features = false, features = ["macos_kqueue"] }
pin-project = "1.0.12"
regex = "1.8.3"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots", "stream"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
xdg = "2.5.0"

[dependencies.tokio]
version = "1.28.2"
features = [
	"fs",
	"io-util",
	"macros",
	"process",
	"rt",
	"rt-multi-thread",
	"sync",
]

[dependencies.async-compression]
version = "0.3.15"
features = [
	"futures-io",
	"xz",
	"zstd",
	"brotli",
	"deflate",
	"gzip"
]
