[package]
name = "attic-server"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "attic_server"
path = "src/lib.rs"

[[bin]]
name = "atticd"
path = "src/main.rs"
doc = false

[[bin]]
name = "atticadm"
path = "src/adm/main.rs"
doc = false

[dependencies]
attic = { path = "../attic", default-features = false, features = ["chunking", "stream", "tokio"] }
attic-token = { path = "../token" }

anyhow = "1.0.71"
async-stream = "0.3.5"
async-trait = "0.1.68"
aws-config = "1.5.0"
aws-sdk-s3 = "1.32.0"
axum = "0.7.5"
axum-macros = "0.4.1"
base64 = "0.22.1"
bytes = "1.4.0"
chrono = "0.4.24"
clap = { version = "4.3", features = ["derive"] }
derivative = "2.2.0"
digest = "0.10.7"
displaydoc = "0.2.4"
enum-as-inner = "0.6.0"
futures = "0.3.28"
hex = "0.4.3"
http-body-util = "0.1.1"
humantime = "2.1.0"
humantime-serde = "1.1.1"
itoa = "=1.0.5"
maybe-owned = "0.3.4"
rand = "0.8.5"
regex = "1.8.3"
ryu = "1.0.13"
sha2 = { version = "0.10.6", features = ["asm"] }
serde = "1.0.163"
serde_json = "1.0.96"
serde_with = "3.0.0"
tokio-util = { version = "0.7.8", features = [ "io" ] }
toml = "0.8.8"
tower-http = { version = "0.5.2", features = [ "catch-panic", "trace" ] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = [ "json" ] }
uuid = { version = "1.3.3", features = ["v4"] }
console-subscriber = "0.2.0"
xdg = "2.5.0"
rsa = "0.9.3"

[dependencies.async-compression]
version = "0.4.0"
features = [
	"tokio",
	"xz",
	"zstd",
	"brotli",
]

[dependencies.sea-orm]
version = "1.0.0"
features = [
	"runtime-tokio-rustls",
	"macros",
	"sqlx-postgres",
	"sqlx-sqlite",
	"debug-print",
]

[dependencies.sea-orm-migration]
version = "0.12.10"

[dependencies.tokio]
version = "1.28.2"
features = [
	"fs",
	"io-util",
	"macros",
	"process",
	"rt",
	"rt-multi-thread",
	"sync",
]
