[package]
name = "attic-server"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "attic_server"
path = "src/lib.rs"

[[bin]]
name = "atticd"
path = "src/main.rs"
doc = false

[[bin]]
name = "atticadm"
path = "src/adm/main.rs"
doc = false

[dependencies]
attic = { path = "../attic", default-features = false, features = ["chunking", "stream", "tokio"] }
attic-token = { path = "../token" }

anyhow = "1.0.98"
async-stream = "0.3.6"
async-trait = "0.1.88"
aws-config = "1.8.1"
aws-sdk-s3 = "1.96.0"
axum = "0.7.9"
axum-macros = "0.4.2"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.41"
clap = { version = "4.5", features = ["derive"] }
derivative = "2.2.0"
digest = "0.10.7"
displaydoc = "0.2.5"
enum-as-inner = "0.6.1"
futures = "0.3.31"
hex = "0.4.3"
http-body-util = "0.1.3"
humantime = "2.2.0"
humantime-serde = "1.1.1"
itoa = "1.0.15"
rand = "0.8.5"
regex = "1.11.1"
ryu = "1.0.20"
sha2 = { version = "0.10.9", features = ["asm"] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_with = "3.14.0"
tokio-util = { version = "0.7.15", features = [ "io" ] }
toml = "0.8.23"
tower-http = { version = "0.5.2", features = [ "catch-panic", "trace" ] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [ "json" ] }
uuid = { version = "1.17.0", features = ["v4"] }
console-subscriber = "0.2.0"
xdg = "2.5.2"
rsa = "0.9.8"

[dependencies.async-compression]
version = "0.4.25"
features = [
	"tokio",
	"xz",
	"zstd",
	"brotli",
]

[dependencies.sea-orm]
version = "1.1.13"
features = [
	"runtime-tokio-rustls",
	"macros",
	"sqlx-postgres",
	"sqlx-sqlite",
	"debug-print",
]

[dependencies.sea-orm-migration]
version = "1.1.13"

[dependencies.tokio]
version = "1.46.1"
features = [
	"fs",
	"io-util",
	"macros",
	"process",
	"rt",
	"rt-multi-thread",
	"sync",
]
