[package]
name = "attic-token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attic = { path = "../attic", default-features = false }

base64 = "0.21.0"
chrono = "0.4.23"
displaydoc = "0.2.3"
jwt-simple = "0.11.4"
lazy_static = "1.4.0"
regex = "1.7.1"
serde = "1.0.152"
serde_with = "2.2.0"
tracing = "0.1.37"
